--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,5 @@
 /*  your css code here. If applicable */
+h1 {
+	background-image: url('https://www.globalfocusmagazine.com/wp-content/uploads/2020/02/Engaging_with_technology-scaled.jpg');
+	text-align: center;
+}
