--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,18 @@
-/*  your css code here. If applicable */
+body {
+	margin: 0;
+	padding: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	background: url('https://www.globalfocusmagazine.com/wp-content/uploads/2020/02/Engaging_with_technology-scaled.jpg') no-repeat;
+	background-size: cover;
+	color: rgba(0, 0, 0, 0);
+}
+
 h1 {
 	text-align: center;
-	background-image: url('https://www.globalfocusmagazine.com/wp-content/uploads/2020/02/Engaging_with_technology-scaled.jpg') no-repeat;
-	color: rgba(0, 0, 0, 0); 
-	padding-box: auto; 
-	border-box: auto;
+	padding: 20px;
+	background-color: rgba(255, 255, 255, 0.8);
+	color: white;
 }
